# operio-agent

./: .AGENTS.md  .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  PRIVACY.md  README.md  arize-plan.md  docker-compose.prod.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.agents/: agent-config.json
agents/: __init__.py  pyproject.toml
agents/operio_agent/: __init__.py  config.py  main.py
agents/operio_agent/api/: __init__.py  deps.py
agents/operio_agent/api/routes/: chat.py  docs.py  staff.py  tickets.py
agents/operio_agent/api/schemas/: __init__.py  chat.py  staff.py  tickets.py
agents/operio_agent/core/: __init__.py  brain.py  evals.py  mcp_client.py  prompts.py  session_analysis.py
agents/operio_agent/database/: session.py
agents/operio_agent/documents/: __init__.py  source_registry.py
agents/operio_agent/evals/: README.md  __init__.py  ax_publish.py  baseline.py  live_trace.py  runner.py  scenarios.py  utils.py
agents/scripts/: export_ax_eval_dataset.py  generate_source_pdfs.py  publish_ax_scenario_baseline.py  run_scenario_baseline.py
agents/tests/: evaluate_brain.py  test_brain.py  test_docs_source.py  test_evaluate_brain.py  test_session_analysis.py
demo/: index.html
docs/: ARCHITECTURE.md  ARIZE_AX_MIGRATION.md  ARIZE_EVALS.md  ARIZE_JUDGING_GUIDE.md  HACKATHON.md  PRODUCT.md  index.html
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
mcp_servers/: elastic-server.ts  mongodb-server.ts
scripts/: code-review.ts  seed.js  (+4 more)
(+66 files in other folders)
