[project]
name = "agents"
version = "0.1.0"
description = "Operio Agent orchestrator and brain"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "google-genai>=0.1.1",
    "arize-phoenix>=4.3.0",
    "openinference-instrumentation-google-genai>=0.1.0",
    "mcp>=1.0.0",
    "pymongo>=4.7.2",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.1",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "pydantic-settings>=2.2.1",
    "google-adk>=2.2.0",
    "google-cloud-aiplatform>=1.156.0",
    "arize-phoenix-evals>=3.1.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.15.16",
]

[tool.uv]
package = false
